--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,10 +13,15 @@
   --small-font: 0.8em;
   --large-font: 1.2em;
 }
+@font-face {
+  font-family: myFirstFont;
+  src: url(../fonts/pay.ttf);
+}
 * {
   box-sizing: border-box;
 }
 body {
+  padding: 0;
   margin: 0;
   font-family: var(--font-body);
   font-size: var(--font-base);
@@ -54,6 +59,105 @@ button {
 .movie-list a {
   text-decoration: none;
   color: var(--dark-grey);
+}
+/* Home page */
+.header-hero {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  width: 100%;
+  background-color: rgb(255, 255, 255, 0.4);
+  background-size: cover;
+  z-index: 1;
+}
+
+.container-hero-cover {
+  height: 1300px;
+  margin: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.cover-hero {
+  background-image: linear-gradient(
+    to right,
+    rgb(20, 30, 48, 0.8),
+    rgba(0, 71, 153, 0.4),
+    rgb(208, 199, 199, 0)
+  );
+  background-size: cover;
+  width: 100%;
+  height: 1300px;
+  filter: brightness(
+    90%
+  ); /* Adjust the value to control the darkness (0% - 100%) */
+}
+
+.hero-container {
+  text-align: center;
+  position: absolute;
+  display: flex;
+  padding: 2em 2.5em;
+  gap: 1em;
+  width: 46%;
+  align-items: center;
+  left: 33px;
+  top: 3%;
+  flex-direction: column;
+  color: white;
+  font-size: 2rem;
+  /* background-color: rgb(0, 0, 0, 0.1);
+  border-radius: 10%; */
+  justify-content: center;
+  height: 90%;
+}
+
+.hero-title,
+.hero-date {
+  font-size: 5rem;
+  font-weight: 900;
+  color: #58eae5;
+  font-family: myFirstFont;
+  margin-bottom: 0;
+}
+
+.hero-container p {
+  text-shadow: 2px 2px #000000;
+  letter-spacing: 2px;
+  line-height: 50px;
+  font-weight: bold;
+}
+
+.hero-information {
+  display: flex;
+  background-color: white;
+  padding: 1rem 1rem;
+  text-align: center;
+  align-items: center;
+}
+
+.hero-information > a {
+  text-decoration: none;
+  color: #000;
+  margin: auto 0;
+}
+
+.hero-modal {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.btn-trailer {
+  background-color: #58eae5;
+  padding: 1rem 1rem;
+  padding-bottom: 1.4rem;
+  border-radius: 10%;
+}
+
+.listcontent-container {
+  padding: 2em;
 }
 
 /* Modal Styles  */
@@ -249,8 +353,15 @@ button {
 .recommendation-movies-container {
   max-width: 1000px;
 }
+
+.nowplaying-movies-container {
+  max-width: 85%;
+  margin: auto;
+}
+
 .movie-cast,
-.recommendation-movies {
+.recommendation-movies,
+.nowplaying-movies {
   margin: 0;
   display: grid;
   padding: 1em 0;
@@ -262,19 +373,22 @@ button {
   list-style: none;
 }
 .movie-cast::-webkit-scrollbar,
-.recommendation-movies::-webkit-scrollbar {
+.recommendation-movies::-webkit-scrollbar,
+.nowplaying-movies::-webkit-scrollbar {
   width: 10px;
   height: 8px;
   background-color: #f5f5f5;
 }
 .movie-cast::-webkit-scrollbar-thumb,
-.recommendation-movies::-webkit-scrollbar-thumb {
+.recommendation-movies::-webkit-scrollbar-thumb,
+.nowplaying-movies::-webkit-scrollbar-thumb {
   border-radius: 8px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #afafaf;
 }
 .movie-cast li,
-.recommendation-movies li {
+.recommendation-movies li,
+.nowplaying-movies li {
   margin: 5px;
   border-radius: 10px;
   border: solid 1px #d6d5d5;
@@ -308,25 +422,30 @@ button {
 /* End Main Cast Style */
 
 /* Recommendation Styles */
-.recommendation-movies {
+.recommendation-movies,
+.nowplaying-movies {
   grid-auto-columns: 262px;
   gap: 0.7em;
   padding: 1em 0 0.5em;
 }
-.recommendation-movies li div {
+.recommendation-movies li div,
+.nowplaying-movies li div {
   display: flex;
   justify-content: space-between;
   margin-top: 0.3em;
   margin-right: 0.2em;
 }
-.recommendation-movies li {
+.recommendation-movies li,
+.nowplaying-movies li {
   border: none;
   height: auto;
 }
-.recommendation-movies li a img {
+.recommendation-movies li a img,
+.nowplaying-movies li a img {
   border-radius: 10px;
 }
-.recommendation-movies li div a {
+.recommendation-movies li div a,
+.nowplaying-movies li div a {
   text-decoration: none;
   color: #000;
   white-space: nowrap;
@@ -334,7 +453,8 @@ button {
   text-overflow: ellipsis;
   font-size: 0.8em;
 }
-.recommendation-movies li div p {
+.recommendation-movies li div p,
+.nowplaying-movies li div p {
   margin: 0;
   font-size: 0.8em;
 }
