--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,10 +70,12 @@ button {
   background-color: rgb(255, 255, 255, 0.4);
   background-size: cover;
   z-index: 1;
+  height: 14%;
 }
 
 .container-hero-cover {
-  height: 1300px;
+  /* width: 1300px; */
+  height: 100vh;
   margin: 0;
   background-size: cover;
   background-repeat: no-repeat;
@@ -88,7 +90,7 @@ button {
   );
   background-size: cover;
   width: 100%;
-  height: 1300px;
+  height: 100vh;
   filter: brightness(
     90%
   ); /* Adjust the value to control the darkness (0% - 100%) */
@@ -99,23 +101,22 @@ button {
   position: absolute;
   display: flex;
   padding: 2em 2.5em;
-  gap: 1em;
-  width: 46%;
+  width: 40%;
   align-items: center;
   left: 33px;
   top: 3%;
   flex-direction: column;
   color: white;
-  font-size: 2rem;
+  font-size: 1rem;
   /* background-color: rgb(0, 0, 0, 0.1);
   border-radius: 10%; */
   justify-content: center;
-  height: 90%;
+  height: 90vh;
 }
 
 .hero-title,
 .hero-date {
-  font-size: 5rem;
+  font-size: 3rem;
   font-weight: 900;
   color: #58eae5;
   font-family: myFirstFont;
@@ -124,9 +125,9 @@ button {
 
 .hero-container p {
   text-shadow: 2px 2px #000000;
-  letter-spacing: 2px;
-  line-height: 50px;
+  line-height: 30px;
   font-weight: bold;
+  margin-bottom: 3em;
 }
 
 .hero-information {
@@ -144,9 +145,11 @@ button {
 }
 
 .hero-modal {
+  text-align: center;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .btn-trailer {
@@ -422,23 +425,39 @@ button {
 /* End Main Cast Style */
 
 /* Recommendation Styles */
-.recommendation-movies,
-.nowplaying-movies {
+.recommendation-movies {
   grid-auto-columns: 262px;
   gap: 0.7em;
   padding: 1em 0 0.5em;
 }
-.recommendation-movies li div,
-.nowplaying-movies li div {
+
+.nowplaying-movies {
+  grid-auto-columns: 170px;
+  gap: 0.7em;
+  padding: 1em 0 0.5em;
+}
+.recommendation-movies li div {
   display: flex;
   justify-content: space-between;
   margin-top: 0.3em;
   margin-right: 0.2em;
 }
-.recommendation-movies li,
+
+.nowplaying-movies li div {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.3em;
+  margin-right: 0.2em;
+}
+.recommendation-movies li {
+  border: none;
+  height: auto;
+}
+
 .nowplaying-movies li {
   border: none;
   height: auto;
+  width: 150px;
 }
 .recommendation-movies li a img,
 .nowplaying-movies li a img {
