--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
 :root {
   --font-body: Arial, Helvetica, sans-serif;
   --font-headline: Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -36,7 +38,6 @@ img {
 header {
   display: flex;
   justify-content: space-between;
-  padding: 0 10px;
 }
 
 button {
@@ -74,7 +75,7 @@ button {
 }
 
 .container-hero-cover {
-  /* width: 1300px; */
+  width: 100%;
   height: 100vh;
   margin: 0;
   background-size: cover;
@@ -97,12 +98,10 @@ button {
 }
 
 .hero-container {
-  text-align: center;
   position: absolute;
   display: flex;
   padding: 2em 2.5em;
   width: 40%;
-  align-items: center;
   left: 33px;
   top: 3%;
   flex-direction: column;
@@ -148,7 +147,8 @@ button {
   text-align: center;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: start;
+  gap: 2em;
   align-items: center;
 }
 
@@ -164,7 +164,8 @@ button {
 }
 
 /* Modal Styles  */
-.trailer-modal {
+.trailer-modal,
+.rate-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -176,35 +177,59 @@ button {
   align-items: center;
   justify-content: center;
 }
-.modal-header {
+
+.modal-header,
+.rate-modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5em 1em;
 }
-.modal-header h3 {
+.rate-modal-header {
+  padding: 0.2em 1em;
+}
+.modal-header h3,
+.rate-modal-header h3 {
   margin: 0.8em 0;
   color: #ffff;
+}
+.rate-modal-header h3 {
+  color: #000;
 }
 
 .modal-header span {
   color: #ffffff7e;
 }
-.close-modal {
+.rate-modal-header span {
+  color: #1f1f1f7e;
+}
+.close-modal,
+.close-modal-rate {
   margin: 0;
   padding: 0 0.2em;
   font-size: 1.5em;
   cursor: pointer;
 }
-.close-modal:hover {
+.close-modal:hover,
+.close-modal-rate:hover {
   background-color: rgba(221, 219, 219, 0.171);
   border-radius: 5px;
 }
 /* Modal Content */
-.modal-content {
+.modal-content,
+.rate-modal-content {
   background-color: #000;
   margin: auto;
   width: 70%;
+}
+.rate-modal-content hr {
+  margin: 0;
+}
+.rate-modal-content {
+  background-color: #fff;
+  border-radius: 20px;
+  width: 25%;
+  padding: 0 1em;
 }
 #btn-openModal-trailer {
   cursor: pointer;
@@ -213,6 +238,13 @@ button {
 .play-icon {
   padding-right: 0.2em;
   font-size: 1.2em;
+}
+
+.rate-modal-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
 }
 /* End Modal Styles */
 
@@ -445,7 +477,7 @@ button {
 
 .nowplaying-movies li div {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 0.3em;
   margin-right: 0.2em;
 }
@@ -495,49 +527,47 @@ button {
 }
 
 /* Movie Rating Styles */
-
 .rate {
   display: inline-block;
   border: 0;
 }
-/* Hide radio */
+
 .rate > input {
   display: none;
 }
-/* Order correctly by floating highest to the right */
+
 .rate > label {
   float: right;
 }
-/* The star of the show */
+
 .rate > label:before {
   display: inline-block;
-  font-size: 30px;
-  padding: 0.3rem 0.3rem;
-  margin: 0 2px;
+  font-size: 2.5rem;
+  padding: 0.3rem 0.2rem;
+  margin: 0;
   cursor: pointer;
-  font-family: "Font Awesome 5 Free";
-  content: "\f005";
-  font-weight: 900;
+  font-family: FontAwesome;
+  content: "\f005 ";
 }
-/* Zero stars rating */
+
 .rate > label:last-child:before {
-  font-weight: 500;
+  content: "\f006 ";
 }
-/* Half star trick */
 .rate .half:before {
-  content: "\f089 "; /* half star no outline */
+  content: "\f089 ";
   position: absolute;
   padding-right: 0;
 }
 /* Click + hover color */
-input:checked ~ label, /* color current and previous stars on checked */
-label:hover, label:hover ~ label {
-  color: #51750d;
-} /* color previous stars on hover */
+input:checked ~ label,
+label:hover,
+label:hover ~ label {
+  color: #ffee02;
+}
 
-/* Hover highlights */
-input:checked + label:hover, input:checked ~ label:hover, /* highlight current and previous stars */
-input:checked ~ label:hover ~ label, /* highlight previous selected stars for new rating */
-label:hover ~ input:checked ~ label /* highlight previous selected stars */ {
-  color: #a6e72d;
+input:checked + label:hover,
+input:checked ~ label:hover,
+input:checked ~ label:hover ~ label,
+label:hover ~ input:checked ~ label {
+  color: #ffee02;
 }
