--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,13 @@ header {
   display: flex;
   justify-content: space-between;
 }
-
+footer {
+  text-align: center;
+  margin: 1em;
+}
+footer hr {
+  width: 80%;
+}
 button {
   padding: 0.3em 1em;
   background-color: var(--secondary-color);
